Dashboard Panel for Admins

--- a/HMS/Views/Shared/_Layout.cshtml
+++ b/HMS/Views/Shared/_Layout.cshtml
@@ -24,6 +24,16 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
+					@if (User.IsInRole("Administrator"))
+					{
+						<li><a href="@Url.Action("Index", "Dashboard")">Dashboard</a></li>
+					}
+					else
+					{
+						<li><a href="@Url.Action("Index", "Dashboard")">Dashboard</a></li>
+					}
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
