--- a/HMS/Areas/Dashboard/Views/AccomodationTypes/Index.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationTypes/Index.cshtml
@@ -1,6 +1,7 @@
-﻿
+﻿@model HMS.Areas.Dashboard.ViewModels.AccomodationTypesListingModel
+
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <div class="row">
@@ -12,32 +13,36 @@
 
 <div class="row mb-3">
 	<div class="col col-lg-12">
-		<div class="input-group">
-			<input type="text" class="form-control" placeholder="Search.">
-			<div class="input-group-append">
-				<button class="btn btn-outline-primary" type="button">Search</button>
-				<button class="btn btn-outline-secondary" type="button">Reset</button>
-				<button id="createButton" class="btn btn-outline-success" type="button" data-toggle="modal" data-target="#actionModal">Create</button>
+		<form>
+			<div class="input-group">
+				<input type="text" name="searchterm" class="form-control" placeholder="Search." value="@Model.SearchTerm" required>
+				<div class="input-group-append">
+					<button class="btn btn-outline-primary" type="submit"><i class="fas fa-search mr-1"></i> Search</button>
+					<a class="btn btn-outline-secondary" href="@Url.Action("Index", "AccomodationTypes")"><i class="fas fa-redo-alt mr-1"></i> Reset</a>
+					<button data-href="@Url.Action("Action", "AccomodationTypes")" class="data-btn btn btn-outline-success" type="button" data-toggle="modal" data-target="#actionModal"><i class="fas fa-plus mr-1"></i> Create</button>
+				</div>
 			</div>
-		</div>
+		</form>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col col-lg-12">
-		@{ Html.RenderAction("Listing"); }
+		@{
+			Html.RenderPartial("_Listing", Model);
+		}
 	</div>
 </div>
 
 <div class="modal fade" id="actionModal" tabindex="-1" role="dialog">
-	<div class="modal-dialog" role="document">		
+	<div class="modal-dialog" role="document">
 	</div>
 </div>
 
 <script>
-	$("#createButton").click(function () {
+	$(".data-btn").click(function () {
 		$.ajax({
-			url: '@Url.Action("Action", "AccomodationTypes")',
+			url: $(this).attr("data-href"),
 		})
 		.done(function (response) {
 			$("#actionModal .modal-dialog").html(response);
