--- a/HMS/Areas/Dashboard/Views/AccomodationTypes/_Delete.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationTypes/_Delete.cshtml
@@ -5,14 +5,7 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<h5 class="modal-title">
-				@if(Model.ID > 0)
-				{
-					<span>Edit Accomodation Type</span>
-				}
-				else
-				{
-					<span>Create Accomodation Type</span>
-				}
+				<span>Delete Accomodation Type</span>
 			</h5>
 			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
@@ -21,22 +14,13 @@
 		<div class="modal-body">
 			<form id="actionForm">
 				<input type="hidden" name="ID" value="@Model.ID" />
-				<div class="form-group">
-					<label>Name</label>
-					<input class="form-control" name="Name" placeholder="Enter Accomodation Type Name." value="@Model.Name">
-				</div>
-				<div class="form-group">
-					<label>Description</label>
-					<textarea class="form-control" name="Description" placeholder="Enter Accomodation Type Description.">@Model.Description</textarea>
-				</div>
 			</form>
-
-			<div class="errorDiv">
-
+			<div class="alert alert-danger" role="alert">
+				Are you sure you want to delete this Accomodation Type?
 			</div>
 		</div>
 		<div class="modal-footer">
-			<button id="actionButton" type="button" class="btn btn-primary"><i class="fas fa-save mr-1"></i> Save</button>
+			<button id="actionButton" type="button" class="btn btn-danger"><i class="fas fa-trash-alt mr-1"></i> Delete</button>
 			<button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times mr-1"></i> Close</button>
 		</div>
 	</div>
@@ -45,14 +29,14 @@
 <script>
 	$("#actionButton").click(function () {
 		$.ajax({
-			url: '@Url.Action("Action", "AccomodationTypes")',
+			url: '@Url.Action("Delete", "AccomodationTypes")',
 			type: "post",
 			data: $("#actionForm").serialize()
 		})
 		.done(function (response) {
 			if(response.Success)
 			{
-				location.reload();
+				window.location.href = "@Url.Action("Index", "AccomodationTypes")";
 			}
 			else {
 				$(".errorDiv").html(response.Message);
