--- a/HMS/Areas/Dashboard/Views/Shared/_Layout.cshtml
+++ b/HMS/Areas/Dashboard/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
 				<a href="@Url.Action("Index", "AccomodationTypes")" class="list-group-item list-group-item-action bg-light">
 					<i class="fas fa-building mr-1"></i> Accomodation Types
 				</a>
+				<a href="@Url.Action("Index", "AccomodationPackages")" class="list-group-item list-group-item-action bg-light">
+					<i class="fas fa-project-diagram"></i> Accomodation Packages
+				</a>
 				<a href="@Url.Action("Index", "Roles")" class="list-group-item list-group-item-action bg-light">
 					<i class="fas fa-users-cog mr-1"></i> Roles
 				</a>
@@ -61,7 +64,7 @@
 				</div>
 			</nav>
 
-			<div class="container-fluid">
+			<div class="container-fluid mt-2">
 				@RenderBody()				
 			</div>
 		</div>
