--- a/HMS/Areas/Dashboard/Views/Shared/_Layout.cshtml
+++ b/HMS/Areas/Dashboard/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
 				<a href="@Url.Action("Index", "AccomodationPackages")" class="list-group-item list-group-item-action bg-light">
 					<i class="fas fa-project-diagram"></i> Accomodation Packages
 				</a>
+				<a href="@Url.Action("Index", "Accomodations")" class="list-group-item list-group-item-action bg-light">
+					<i class="fas fa-map-pin mr-1"></i> Accomodations
+				</a>
 				<a href="@Url.Action("Index", "Roles")" class="list-group-item list-group-item-action bg-light">
 					<i class="fas fa-users-cog mr-1"></i> Roles
 				</a>
