--- a/HMS/Areas/Dashboard/Views/Accomodations/_Listing.cshtml
+++ b/HMS/Areas/Dashboard/Views/Accomodations/_Listing.cshtml
@@ -6,7 +6,7 @@
 		<thead>
 			<tr>
 				<th scope="col">Name</th>
-				<th scope="col">Fee Per Night</th>
+				<th scope="col">Description</th>
 				<th scope="col">Accomodation Package</th>
 				<th scope="col">Actions</th>
 			</tr>
