--- a/HMS/Areas/Dashboard/Views/Users/_Listing.cshtml
+++ b/HMS/Areas/Dashboard/Views/Users/_Listing.cshtml
@@ -23,16 +23,12 @@
 						@user.UserName
 					</td>
 					<td>
-						@*@if (accomodation.AccomodationPackage != null)
-						{
-							@accomodation.AccomodationPackage.Name
-						}*@
-
 						-
 					</td>
 					<td>
 						<button data-href="@Url.Action("Action", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal"><i class="fas fa-pen mr-1"></i> Edit</button>
 						<button data-href="@Url.Action("Delete", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal"><i class="fas fa-trash-alt mr-1"></i> Delete</button>
+						<button data-href="@Url.Action("UserRoles", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-info" data-toggle="modal" data-target="#actionModal"><i class="fas fa-users-cog mr-1"></i> Roles</button>
 					</td>
 				</tr>
 			}
