--- a/HMS/Areas/Dashboard/Views/Users/_Listing.cshtml
+++ b/HMS/Areas/Dashboard/Views/Users/_Listing.cshtml
@@ -5,9 +5,10 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
+				<th scope="col">Full Name</th>
 				<th scope="col">Email</th>
 				<th scope="col">Username</th>
-				<th scope="col">Role</th>
+				<th scope="col">Roles</th>
 				<th scope="col">Actions</th>
 			</tr>
 		</thead>
@@ -17,18 +18,21 @@
 			{
 				<tr>
 					<td>
+						@user.FullName
+					</td>
+					<td>
 						@user.Email
 					</td>
 					<td>
 						@user.UserName
 					</td>
 					<td>
-						-
+						@user.Roles.Count
 					</td>
 					<td>
 						<button data-href="@Url.Action("Action", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-primary" data-toggle="modal" data-target="#actionModal"><i class="fas fa-pen mr-1"></i> Edit</button>
 						<button data-href="@Url.Action("Delete", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-danger" data-toggle="modal" data-target="#actionModal"><i class="fas fa-trash-alt mr-1"></i> Delete</button>
-						<button data-href="@Url.Action("UserRoles", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-info" data-toggle="modal" data-target="#actionModal"><i class="fas fa-users-cog mr-1"></i> Roles</button>
+						<button data-href="@Url.Action("UserRoles", "Users", new { ID = user.Id })" type="button" class="data-btn btn btn-info" data-toggle="modal" data-target="#actionModal"><i class="fas fa-user-shield mr-1"></i> Roles</button>
 					</td>
 				</tr>
 			}
