--- a/HMS/Areas/Dashboard/Views/Users/Index.cshtml
+++ b/HMS/Areas/Dashboard/Views/Users/Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
 	<div class="col col-lg-12">
-		<h2>Users</h2>
+		<h2>Users (@Model.Pager.TotalItems)</h2>
 		<hr />
 	</div>
 </div>
