--- a/HMS/Areas/Dashboard/Views/AccomodationPackages/_Action.cshtml
+++ b/HMS/Areas/Dashboard/Views/AccomodationPackages/_Action.cshtml
@@ -50,9 +50,19 @@
                 <div class="form-group">
                     <label>Pictures</label>
                     <input id="selectPictures" class="form-control" name="Pictures" type="file" multiple>
+                    <input type="hidden" name="pictureIDs" id="pictureIDs" value="" />
+                </div>
+                <div id="picturesArea">
+                    @if (Model.AccomodationPackagePictures != null && Model.AccomodationPackagePictures.Count > 0)
+                    {
+                        foreach (var accomodationPicture in Model.AccomodationPackagePictures)
+                        {
+                            <img src="/images/site/@accomodationPicture.Picture.URL" class="img-fluid" style="width:200px" onclick="removeMe(this)" data-id="@accomodationPicture.PictureID" />
+                        }
+                    }
                 </div>
             </form>
-
+            
 			<div class="errorDiv">
 
 			</div>
@@ -64,8 +74,24 @@
 	</div>
 }
 
+<div id="imageTemplate">
+    <img src="" class="img-fluid" style="width:200px" onclick="removeMe(this)" />
+</div>
+
 <script>
-	$("#actionButton").click(function () {
+    $("#actionButton").click(function () {
+        
+        var pictureIDs = [];
+        $("#picturesArea img").each(function () {
+            var picID = $(this).attr("data-id");
+
+            pictureIDs.push(picID);
+        });
+
+        $("#pictureIDs").val(pictureIDs.join());
+
+        debugger;
+
 		$.ajax({
 			url: '@Url.Action("Action", "AccomodationPackages")',
 			type: "post",
@@ -100,7 +126,21 @@
 			contentType: false
 		})
         .done(function (response) {
-                debugger;
+            debugger;
+            for (var i = 0; i < response.length; i++) {
+                var picture = response[i];
+
+                var $imgHTML = $("#imageTemplate").clone();
+
+                $imgHTML.find("img").attr("src", "/images/site/" + picture.URL);
+                $imgHTML.find("img").attr("data-id", picture.ID);
+
+                $("#picturesArea").append($imgHTML.html());
+            }
 		});
     });
+
+    function removeMe(element) {
+        element.remove();
+    }
 </script>
