--- a/HMS/Views/Shared/_Layout.cshtml
+++ b/HMS/Views/Shared/_Layout.cshtml
@@ -236,6 +236,8 @@
     <!-- Main -->
     <script src="~/Scripts/main.js"></script>
 
+    <script src="~/Scripts/site.js"></script>
+
 </body>
 
 </html>
